[tool.black]
line-length = 88

[tool.poetry]
name = "graph-tools-playground"
version = "0.1.0"
description = ""
authors = ["Diego <dpalma@evernote.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5.1"
matplotlib = "^3.4.1"
dash = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.1"
Sphinx = "2.4.4"
m2r = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
